--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -3,7 +3,7 @@
 [internal] Fixed an issue where source and platform tags were not added to a Zendesk ticket if the account has no blogs. [#17084]
 * [*] Set the post formats to have 'Standard' first and then alphabetized the remaining items. [#17074]
 * [*] Added pull-to-refresh to My Site.
-* [***] Weekly Roundup is live for all users!
+* [***] Weekly Roundup: users will receive a weekly notification that presents a summary of the activity on their most used sites
 
 18.1
 -----
