--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,3 +1,7 @@
+18.3
+-----
+* [*] Fixed a bug on Reader that prevented Saved posts to be removed
+
 18.2
 -----
 [internal] Fixed an issue where source and platform tags were not added to a Zendesk ticket if the account has no blogs. [#17084]
