--- a/WordPress/Resources/release_notes.txt
+++ b/WordPress/Resources/release_notes.txt
@@ -1,9 +1,9 @@
-Do you use the Embed block? For media that you embed on your site, you’ll now see an option to “Resize for smaller devices.” Toggle on to resize your content to fit your screen; toggle off to disable.
+* [internal] Fixed an issue where source and platform tags were not added to a Zendesk ticket if the account has no blogs. [#17084]
+* [*] Set the post formats to have 'Standard' first and then alphabetized the remaining items. [#17074]
+* [*] Added pull-to-refresh to My Site. [#17089]
+* [***] Weekly Roundup: users will receive a weekly notification that presents a summary of the activity on their most used sites [#17066, #17116]
+* [*] Added pull-to-refresh to My Site.
+* [**] Site Comments: when editing a Comment, the author's name, email address, and web address can now be changed. [#17111]
+* [**] Block editor: Enable embed preview for a list of providers (for now only YouTube and Twitter) [https://github.com/WordPress/gutenberg/pull/34446]
+* [***] Block editor: Add Inserter Block Search [https://github.com/WordPress/gutenberg/pull/33237]
 
-Enjoying the Blogging Reminders tool? We’ve added a new feature that lets you choose a specific time to receive a notification.
-
-Need to close your account? (We hope you never leave us!) But if needed, you now have the ability to do so in your Account Settings.
-
-Geotagging posts is no longer supported on the web, so we’ve removed the Location option under Post Settings.
-
-We also made other improvements, including a fix to a cropping issue in the Reader, as well as the ability to recommend the app to your friends on your Me and About screens.
